2007-07-03  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/Makefile.am: run check.sh on make check.
	* gtksourceview/language-specs/check.sh: made it work in make check,
	removed testdark.xml.

	* po/POTFILES.in:
	* po/POTFILES.skip: moved testdark.xml and gregex.c to POTFILES.skip,
	hopefully nobody will add those into POTFILES.in again.

2007-07-03  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/tango.xml: first cut of a
	tango style scheme, contributed by Michael Monreal.

2007-07-03  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/scheme.lang: escape " in strings
	* gtksourceview/language-specs/ocl.lang: New, contributed by
	Mario Carrión. Bug #345911.

2007-07-03  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourceview.c:
	* gtksourceview/gtksourceview.h:
	* tests/test-widget.c:

	Rename smart-home end enum to be consistent with other constants
	and to make python bindings happy.

2007-07-03  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcestylescheme.c (_gtk_source_style_scheme_new_from_file):
	do not leak xml.

2007-06-29  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/ruby.lang: do not detect :foo
	inside ::foo a symbol and other tweaks.

	* gtksourceview/language-specs/java.lang: do not use Others
	style.

2007-06-28  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcelanguage-parser-2.c (handle_define_regex_element):
	expand patterns in define-regex elements.
	(handle_context_element): treat empty contexts as contexts with match="$^".

	* gtksourceview/language-specs/language2.rng:
	allow empty contexts.

	* gtksourceview/language-specs/check.sh: added lua.lang, made it look
	at extension of files passed to it on command line.

	* gtksourceview/language-specs/changelog.lang: fancier date matching.

2007-06-28  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/gtk-doc.lang: