@@ -5,11 +5,12 @@
 
 langs="ada.lang awk.lang changelog.lang chdr.lang c.lang cpp.lang csharp.lang
        css.lang def.lang desktop.lang diff.lang dpatch.lang dtd.lang
-       fortran.lang gap.lang gtk-doc.lang gtkrc.lang haskell.lang
-       html.lang idl.lang ini.lang java.lang javascript.lang latex.lang
-       libtool.lang lua.lang m4.lang makefile.lang objc.lang ocaml.lang
-       ocl.lang octave.lang pascal.lang perl.lang php.lang pkgconfig.lang
-       po.lang python.lang ruby.lang scheme.lang sh.lang sql.lang tcl.lang
+       fortran.lang gap.lang gtk-doc.lang gtkrc.lang haddock.lang
+       haskell.lang haskell-literate.lang html.lang idl.lang ini.lang
+       java.lang javascript.lang latex.lang libtool.lang lua.lang
+       m4.lang makefile.lang objc.lang ocaml.lang ocl.lang octave.lang
+       pascal.lang perl.lang php.lang pkgconfig.lang po.lang
+       python.lang ruby.lang scheme.lang sh.lang sql.lang tcl.lang
        texinfo.lang verilog.lang xml.lang yacc.lang"
 
 styles="gvim.xml kate.xml tango.xml"
