@@ -1,3 +1,11 @@
+2007-07-03  Paolo Borelli  <pborelli@katamail.com>
+
+	* gtksourceview/language-specs/haddock.lang:
+	* gtksourceview/language-specs/haskell.lang:
+	* gtksourceview/language-specs/haskell-literate.lang:
+
+	Awesome haskell support by Duncan Coutts. Bug #453278
+
 2007-07-03  Yevgen Muntyan  <muntyan@tamu.edu>
 
 	* gtksourceview/language-specs/Makefile.am: run check.sh on make check.
